Closed Bug 1636064 Opened 5 years ago Closed 5 years ago

SpiderMonkey build error: Undefined symbol: js::BytecodeLocation::isValid

Categories

(Core :: JavaScript Engine, defect)

68 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: qwertiest, Assigned: jandem)

Details

Attachments

(1 file)

SM version: ESR 68.8.0
LLVM version: 10.0.0

Repro steps:

./mach bootstrap
cd js/src
mkdir _build
cd _build
JS_STANDALONE=1 ../configure --enable-nspr-build --target=i686-pc-mingw32 --host=i686-pc-mingw32 --with-libclang-path="C:/Program Files/LLVM/bin" --with-clang-path="C:/Program Files/LLVM/bin/clang.exe" --enable-debug
mozmake

Build error:

lld-link: warning: ignoring unknown argument '-RELEASE'
lld-link: error: undefined symbol: public: bool __thiscall js::BytecodeLocation::isValid(class JSScript const *) const
>>> referenced by x:\moz\firefox-68.8.0\js\src\vm\JSScript.h:2114
>>>               ..\RegExp.obj:(public: class js::BytecodeLocation __thiscall JSScript::location(void))
>>> referenced by x:\moz\firefox-68.8.0\js\src\vm\JSScript.h:2716
>>>               ..\RegExp.obj:(public: class js::BytecodeLocation __thiscall JSScript::mainLocation(void) const)
>>> referenced by x:\moz\firefox-68.8.0\js\src\vm\JSScript.h:2720
>>>               ..\RegExp.obj:(public: class js::BytecodeLocation __thiscall JSScript::endLocation(void) const)
>>> referenced by ..\jsmath.obj
>>> referenced by ..\jsutil.obj
>>> referenced by ..\Interpreter.obj
>>> referenced by ..\Unified_cpp_js_src0.obj
>>> referenced by ..\Unified_cpp_js_src1.obj
>>> referenced by ..\Unified_cpp_js_src10.obj
>>> referenced by ..\Unified_cpp_js_src11.obj
>>> referenced 47 more times
Flags: needinfo?(jdemooij)

Some methods defined in the BytecodeLocation-inl.h file were called from
BytecodeLocation.h. This 'worked' because these methods were not marked 'inline'
in the header file but it confuses some compiler/linker configurations as
reported in the bug.

Assignee: nobody → jdemooij
Flags: needinfo?(jdemooij)
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9d0e75db1aa2 Move some BytecodeLocation debug methods to the cpp file to fix build failures. r=tcampbell
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: