Bug 1636064 - Move some BytecodeLocation debug methods to the cpp file to fix build failures. r=tcampbell

Some methods defined in the BytecodeLocation-inl.h file were called from
BytecodeLocation.h. This 'worked' because these methods were not marked 'inline'
in the header file but it confuses some compiler/linker configurations as
reported in the bug.

Differential Revision: https://phabricator.services.mozilla.com/D75038